parser/src/snapshots/rustpython_parser__context__tests__assign_for.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    For(
        StmtFor {
            range: 0..24,
            target: Name(
                ExprName {
                    range: 4..5,
                    id: "x",
                    ctx: Store,
                },
            ),
            iter: Tuple(
                ExprTuple {
                    range: 9..18,
                    elts: [
                        Constant(
                            ExprConstant {
                                range: 10..11,
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 13..14,
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                range: 16..17,
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        ),
                    ],
                    ctx: Load,
                },
            ),
            body: Suite(
                StmtSuite {
                    range: 20..24,
                    statements: [
                        Pass(
                            StmtPass {
                                range: 20..24,
                            },
                        ),
                    ],
                },
            ),
            orelse: None,
            type_comment: None,
        },
    ),
]
