parser/src/snapshots/rustpython_parser__context__tests__assign_with.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    With(
        StmtWith {
            range: 0..17,
            items: [
                WithItem {
                    range: 5..11,
                    context_expr: Constant(
                        ExprConstant {
                            range: 5..6,
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    ),
                    optional_vars: Some(
                        Name(
                            ExprName {
                                range: 10..11,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                    ),
                },
            ],
            body: Suite(
                StmtSuite {
                    range: 13..17,
                    statements: [
                        Pass(
                            StmtPass {
                                range: 13..17,
                            },
                        ),
                    ],
                },
            ),
            type_comment: None,
        },
    ),
]
